--- a/docker/config/redis/redis.conf
+++ b/docker/config/redis/redis.conf
@@ -1,6 +1,7 @@
 daemonize no
 pidfile /var/run/redis/redis-server.pid
-port 6379
+port 63799
+requirepass foopass
 tcp-backlog 511
 timeout 0
 tcp-keepalive 0
