--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,9 @@ services:
 
 env:
   DOCKER_COMPOSE_VERSION: 1.13.0
+  REDIS_HOST: localhost
+  REDIS_PORT: 6379
+  REDIS_PASS: ''
 
 install:
   - sudo rm /usr/local/bin/docker-compose
